# ChangeLog for sys-apps/hwdata-knoppix
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/ChangeLog,v 1.9 2004/05/21 20:49:09 wolf31o2 Exp $

  21 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  hwdata-knoppix-0.107.ebuild:
  Stabilizing on x86.

*hwdata-knoppix-0.107 (14 May 2004)

  14 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +hwdata-knoppix-0.107.ebuild:
  Adding 0.107 version.  All arches please test.

  14 May 2004; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
  Changing maintainers to newly formed livecd herd.

  23 Mar 2004; John Davis <zhen@gentoo.org> hwdata-knoppix-0.95.ebuild:
  bumping to x86 stable

  21 Mar 2004; David Holm <dholm@gentoo.org> hwdata-knoppix-0.95.ebuild:
  Added to ~ppc.

*hwdata-knoppix-0.95 (20 Mar 2004)

  20 Mar 2004; John Davis <zhen@gentoo.org> hwdata-knoppix-0.95.ebuild:
  version bump - thanks too all of the people involved in bug #32218

*hwdata-knoppix-0.8 (02 March 2003)

  03 March 2003;  <livewire@gentoo.org>:

	
	Intial Import 