@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/hwdata-knoppix-0.107.ebuild,v 1.2 2004/05/21 20:49:09 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/hwdata-knoppix-0.107.ebuild,v 1.3 2004/05/30 14:35:46 wolf31o2 Exp $
 
 MY_PV=${PV}-4
 DESCRIPTION="Data for the hwsetup program"
@@ -14,8 +14,6 @@ LICENSE="GPL-2"
 
 DEPEND=""
 RDEPEND=""
-
-S=${WORKDIR}/${P}
 
 src_unpack() {
 	unpack ${A}
