@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/hwdata-knoppix-0.95.ebuild,v 1.3 2004/03/23 20:17:56 zhen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/hwdata-knoppix-0.95.ebuild,v 1.4 2004/05/30 14:35:46 wolf31o2 Exp $
 
 MY_PV=${PV}-1
 DESCRIPTION="data hwsetup program"
@@ -8,14 +8,12 @@ SRC_URI="http://developer.linuxtag.net/knoppix/sources/${PN}_${MY_PV}.tar.gz"
 HOMEPAGE="http://www.knopper.net"
 
 IUSE=""
-KEYWORDS="x86 ~ppc"
+KEYWORDS="x86 ppc"
 SLOT="0"
 LICENSE="GPL-2"
 
 DEPEND=""
 RDEPEND=""
-
-S=${WORKDIR}/${P}
 
 src_unpack() {
 	unpack ${A}
