@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/hwdata-knoppix
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/ChangeLog,v 1.9 2004/05/21 20:49:09 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/ChangeLog,v 1.10 2004/05/30 14:35:46 wolf31o2 Exp $
+
+  30 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  hwdata-knoppix-0.107.ebuild, hwdata-knoppix-0.8.ebuild,
+  hwdata-knoppix-0.95.ebuild:
+  QA cleanup
 
   21 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   hwdata-knoppix-0.107.ebuild:
